added inhibitory neurons insimulation

--- a/beta_tests.ipynb
+++ b/beta_tests.ipynb
@@ -1755,6 +1755,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1dffa60c",
+   "metadata": {},
+   "source": [
+    "### Test 6 :History Filter on 8 PAG cells"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "ed78d99e-9da4-433e-b6cc-e79be23d98f5",
